--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ html {
   }
 
   .panels {
+    display: flex;
     min-height: 100vh;
     overflow: hidden;
   }
@@ -30,10 +31,15 @@ html {
     transition:
       font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
       flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-      background 0.2s;
+      background 0.2s; /* This bit makes the changes look (e.g. words move onto the site) look animated */
     font-size: 20px;
     background-size: cover;
     background-position: center;
+    flex: 1; /*tells the browser to evenly distribute the extra space between the panels */
+    display: flex; /*nest another flex box into the panels flexbox */
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -44,11 +50,31 @@ html {
 
   /* Flex Children */
   .panel > * {
+    align-items: center;
+    display: flex; /*turn this into another flex box */
+    flex: 1 0 auto; /* this spreads the textboxes evenly over the panel */
+    justify-content: center;
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
   }
 
+  .panel > *:first-child { 
+    transform: translateY(-100%); 
+  } /*moves the first paragraph of every panel to the top off the screen */
+
+  .panel.open-active > *:first-child { 
+    transform: translateY(0%); 
+  } /*when the class open-active is applied the text will move into view */
+
+  .panel > *:last-child {
+    transform: translateY(100%); 
+  } /* moves the last paragraph of every panel to the bottom off the screen */
+
+  .panel.open-active > *:last-child { 
+    transform: translateY(0%); 
+  } /*when the class open-active is applied the text will move into view */
+  
   .panel p {
     text-transform: uppercase;
     font-family: 'Amatic SC', cursive;
@@ -56,10 +82,11 @@ html {
     font-size: 2em;
   }
   
-  .panel p:nth-child(2) {
+  .panel p:nth-child(2) { /*this refers to panel, paragraph number 2 */
     font-size: 4em;
   }
 
   .panel.open {
+    flex: 5; /* when the class open is applied to a panel, it will take up 5 x as much room as the other panels */
     font-size: 40px;
   }
