--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ html {
     margin: 0;
   }
   
-  *, *:before, *:after {
+  *, *:before, *:after { /* The * selects every element in the HTML */
     box-sizing: inherit;
   }
 
@@ -31,7 +31,7 @@ html {
     transition:
       font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
       flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-      background 0.2s; /* This bit makes the changes look (e.g. words move onto the site) look animated */
+      background 0.2s; /* This bit makes the changes (e.g. words move onto the site) look animated */
     font-size: 20px;
     background-size: cover;
     background-position: center;
@@ -49,7 +49,7 @@ html {
   .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
   /* Flex Children */
-  .panel > * {
+  .panel > * { /* > is a child selector; so this line selects all the children of the parent .panel */
     align-items: center;
     display: flex; /*turn this into another flex box */
     flex: 1 0 auto; /* this spreads the textboxes evenly over the panel */
@@ -59,7 +59,7 @@ html {
     transition: transform 0.5s;
   }
 
-  .panel > *:first-child { 
+  .panel > *:first-child { /* this line selects all the first children of the parent .panel, meaning all the first paragraphs in a panel! */
     transform: translateY(-100%); 
   } /*moves the first paragraph of every panel to the top off the screen */
 
